[gd_scene load_steps=24 format=2]

[ext_resource path="res://sprites/Act1settings/sceneone/vignette.png" type="Texture" id=1]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/characters/other/paris2.png" type="Texture" id=4]
[ext_resource path="res://sprites/Act1settings/sceneten/jail.png" type="Texture" id=5]
[ext_resource path="res://sprites/characters/other/paris1.png" type="Texture" id=6]
[ext_resource path="res://act3/jailscenes/jail5.gd" type="Script" id=7]
[ext_resource path="res://sprites/UI/continuesprite copy.png" type="Texture" id=8]
[ext_resource path="res://sprites/UI/dialoguebox copy.png" type="Texture" id=9]
[ext_resource path="res://act3/jailscenes/paris2.gd" type="Script" id=10]
[ext_resource path="res://act3/jailscenes/dialoguebox5.gd" type="Script" id=11]
[ext_resource path="res://sprites/UI/dialoguebox.png" type="Texture" id=12]
[ext_resource path="res://sprites/UI/GirlTextbox/arrow.PNG" type="Texture" id=13]
[ext_resource path="res://sprites/UI/GirlTextbox/arrow1.PNG" type="Texture" id=14]
[ext_resource path="res://sounds/458587__inspectorj__ui-mechanical-text-scroll-03-fx-01-loop-[AudioTrimmer.com].wav" type="AudioStream" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 94.6934, 1300.69 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2085.6, 117.683 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 359.53, 406.738 )

[sub_resource type="DynamicFont" id=6]
size = 100
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( 2642.84, -0.25, 0, 0.25, 0, 2642.84, -0.25, 0, 0.25, 0, 2642.84, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1530.1, -0.25, 0, 0.25, 0, 1600, -0.25, 0, 0.25, 0, 1530.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1910.38, 1081.58 )
scale = Vector2( 1.01002, 1.03117 )
texture = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -9.61792, 1019.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3895.26, 971.41 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1893.7, 2134.75 )
shape = SubResource( 2 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 2408.97, 1635.3 )

[node name="paris" type="Area2D" parent="."]
position = Vector2( 6.83765, 20.5129 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="paris"]
margin_left = 2720.29
margin_top = 912.835
margin_right = 3190.29
margin_bottom = 1012.84
custom_fonts/font = SubResource( 3 )
text = "Talk (space)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="paris"]
position = Vector2( 2931.39, 1554.19 )
scale = Vector2( 1.15984, 1.11988 )
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="paris"]
position = Vector2( 2802.33, 1700.74 )
shape = SubResource( 5 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1933.15, 1070.25 )
scale = Vector2( 0.509515, 1.00294 )
texture = ExtResource( 1 )

[node name="dialoguebox" type="Control" parent="."]
margin_left = -487.171
margin_top = -1235.33
margin_right = -447.171
margin_bottom = -1195.33
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="dialoguebox"]
modulate = Color( 0.847059, 0.847059, 0.847059, 1 )
margin_left = 1102.0
margin_top = 1527.0
margin_right = 3669.0
margin_bottom = 2057.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="dialoguebox"]
margin_left = 1270.0
margin_top = 1633.0
margin_right = 3491.0
margin_bottom = 1956.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuesprite" type="Sprite" parent="dialoguebox"]
position = Vector2( 2642.84, 1600 )
scale = Vector2( 1.31444, 1.92604 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 7 )

[node name="Tween" type="Tween" parent="dialoguebox"]

[node name="Type" type="AudioStreamPlayer" parent="dialoguebox"]
stream = ExtResource( 15 )

[node name="dialoguebox2" type="Control" parent="dialoguebox"]
margin_left = 392.955
margin_top = 1191.54
margin_right = 432.955
margin_bottom = 1231.54
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="dialoguebox/dialoguebox2"]
modulate = Color( 0.847059, 0.847059, 0.847059, 1 )
margin_left = 2034.0
margin_top = 1527.0
margin_right = 3669.0
margin_bottom = 2027.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="dialoguebox/dialoguebox2"]
margin_left = 2743.0
margin_top = 1633.0
margin_right = 3519.0
margin_bottom = 1802.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "FIGHT"
text = "FIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="dialoguebox/dialoguebox2"]
margin_left = 2652.0
margin_top = 1822.0
margin_right = 3519.0
margin_bottom = 1970.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
text = "CELEBRATE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="dialoguebox/dialoguebox2"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="dialoguebox/dialoguebox2"]
position = Vector2( 3495.83, 1664.44 )
scale = Vector2( 0.208793, 0.229551 )
frames = SubResource( 8 )
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="dialoguebox/dialoguebox2"]
position = Vector2( 3493.31, 1865.84 )
scale = Vector2( 0.208793, 0.229551 )
frames = SubResource( 8 )
frame = 1
playing = true
flip_v = true
[connection signal="body_entered" from="paris" to="paris" method="_on_paris_body_entered"]
[connection signal="body_entered" from="paris" to="dialoguebox" method="_on_paris_body_entered"]
[connection signal="body_exited" from="paris" to="paris" method="_on_paris_body_exited"]
[connection signal="body_exited" from="paris" to="dialoguebox" method="_on_paris_body_exited"]
[connection signal="tree_exited" from="dialoguebox" to="dialoguebox" method="_on_dialoguebox_tree_exited"]
[connection signal="tween_completed" from="dialoguebox/Tween" to="dialoguebox" method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="dialoguebox/dialoguebox2/Tween" to="dialoguebox/dialoguebox2" method="_on_Tween_tween_completed"]
